2008-02-05  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: add a comment for translators (bug #514598)

2008-01-25  Soren Sandmann  <sandmann@redhat.com>

	* gnome-wp-item.c (collect_save_options): Delete this function.

	* gnome-wp-xml.c: Don't include gnome-wp-utils.h
	* appearance-desktop.c: Don't include gnome-wp-utils.h
	* gnome-wp-item.c: Don't include gnome-wp-utils.h
	* gnome-wp-item.h: Move gconf key macros here from gnome-wp-utils.h

	* Makefile.am: Delete gnome-wp-utils.[ch]
	
	* gnome-wp-utils.[ch]: Delete these files.
	
2008-01-25  Soren Sandmann  <sandmann@redhat.com>

	* gnome-wp-item.h (GNOME_DESKTOP_USE_UNSTABLE_API): 
	* appearance-desktop.c (GNOME_DESKTOP_USE_UNSTABLE_API): 
	* gnome-wp-item.c (GNOME_DESKTOP_USE_UNSTABLE_API): 

	Define this macro before including gnome-bg.h

2008-01-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (on_item_changed): only declare variables at
	the beginning of a code block...
	* gnome-wp-item.c: (gnome_wp_item_update_description): ... and fix a
	constness warning
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): remove unused variable

2008-01-14  Soren Sandmann  <sandmann@redhat.com>

	* appearance-desktop.c: Update list model when the background
	changes. 
	* gnome-wp-item.c: Create a GnomeBG for the item.
	* gnome-wp-item.h: Add a GnomeBG field - Remove
	gnome_wp_item_dup() function.
	* gnome-wp-info.c: Delete gnome_wp_item_dup() function.
	* gnome-wp-xml.c: Ensure that a GnomeBG exists.

2007-12-22  Thomas Wood  <thos@gnome.org>

	* theme-installer.c: (transfer_done_tgz_tbz),
	(transfer_done_archive), (gnome_theme_install_real),
	(transfer_done_cb), (gnome_theme_install_from_uri):

	Make error dialogs more complient with the HIG (bug 400968).

2007-12-21  Luca Ferretti  <elle.uca@libero.it>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (themes_init):
	* theme-util.h:
	Read WindowTitleFont and DocumentsFont from meta-theme